<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ENUM_Sample_Calibration_States" Id="{ec0185cf-305f-4026-a003-981a68b47dc0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE ENUM_Sample_Calibration_States :
(
    Unknown := 0,
    OUT := 1,
    Target1 := 2,
    Target2 := 3,
    Target3 := 4,
    Target4 := 5,
    Target5 := 6,
    Target6 := 7,
    Target7 := 8

)UINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>